--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -6,6 +6,34 @@ page {
     height: 100%;
 }
 
+.imgRunkids {
+    position: absolute;
+    width: 100%;
+    z-index: -9999;
+}
+
+.imgInfo {
+    font-size: 12rpx;
+    margin-top: 425rpx;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.title .mainTitle {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 32rpx;
+}
+
+.title .subTitle {
+    font-size: 24rpx;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .modal {
     width: 650rpx;
     overflow: hidden;
@@ -21,7 +49,7 @@ page {
 
 .habitContainer {
     display: block;
-    margin:3rpx 7rpx ;
+    margin: 3rpx 7rpx;
 }
 
 .controlContainer {
@@ -30,14 +58,14 @@ page {
     background: #f6f6f6;
     border: 1rpx solid #f6f6f6;
     height: 100rpx;
-    align-items:center;
+    align-items: center;
     border-radius: 10rpx;
 
 }
 
 .habitContainer .controlContainer>view {
     margin: 0 30rpx;
-    
+
 }
 
 .dateContainer {
@@ -48,7 +76,7 @@ page {
     background: #f6f6f6;
     border: 1rpx solid #f6f6f6;
     height: 100rpx;
-    align-items:center;
+    align-items: center;
     border-radius: 10rpx;
     font-size: 24rpx;
 }
@@ -59,24 +87,26 @@ page {
     border: 1rpx solid #f6f6f6;
     height: 100rpx;
     margin: 5rpx 0rpx;
-    align-items:center;
+    align-items: center;
     border-radius: 10rpx;
 }
 
 .habitList {
     padding-left: 10rpx;
 }
-.habitTitle{
+
+/* .habitTitle{
     /* width:45%; */
-}
-.habitCheckBox{
+/* } */
+.habitCheckBox {
     /* width:55%; */
     display: flex;
     padding-left: 58rpx;
     justify-content: space-around;
-    justify-content:center;
+    justify-content: center;
     border-radius: 10rpx;
 }
+
 /* 新建习惯模态框 */
 
 .modalMask {
@@ -86,14 +116,14 @@ page {
     top: 0;
     left: 0;
     z-index: 1000;
-    background:  #000;
+    background: #000;
     opacity: 0.85;
     overflow: hidden;
 }
 
 .modalMask .modal {
     width: 650rpx;
-    height:400rpx;
+    height: 400rpx;
     overflow-y: scroll;
     overflow: hidden;
     position: fixed;
