--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -16,12 +16,14 @@
   </view>
   <view class="modalMask" wx:if="{{showModal}}" bind:tap="handleShowModal">
     <view class="modal" wx:if="{{showModal}}" catch:tap="catchEvent">
+  <icon type="clear" size="23" color="rgb(176,176,176)" class='clearBtn' bind:tap="handleShowModal"/> 
       <view class="title">添加记录项</view>
       <view class="content">
         <form bind:submit="formSubmit" bindreset="formReset">
-          <input placeholder="习惯名称" name="habitTitle" />
+          <input placeholder="记录名称" name="habitTitle" />
+          <image class="addImg" bind:tap="submit" mode='aspectFit' src="../../assets/images/addRecordText.png" />
           <!-- <view class="addHabitBtn">
-            <button class="btn" form-type="submit" disabled="{{submitDisabled}}">开始</button>
+          <button class="btn" form-type="submit" disabled="{{submitDisabled}}">开始</button>
             <button class="btn" form-type="reset">放弃</button>
           </view> -->
         </form>
