--- a/miniprogram/pages/punchOut/punchOut.wxss
+++ b/miniprogram/pages/punchOut/punchOut.wxss
@@ -1,20 +1,24 @@
-.container{
-    width: 100%;
-    height: 100%;
-}
-.btn {
-    position: absolute;
-    top: 30%;
-    background-color: #D9D9D9;
-    width: 180rpx;
-    height: 180rpx;
-    border-radius: 100%;
-    text-align: center;
-    line-height: 180rpx;
+.container {
+  position: relative;
+  height: 640rpx;
 }
 
-.punchOutResultBlock{
-    position: fixed;
-    top: 40%;
-    text-align: center
+
+.btn {
+  position: fixed;
+  top: 50%;
+  background-color: #d9d9d9;
+  width: 180rpx;
+  height: 180rpx;
+  border-radius: 100%;
+  text-align: center;
+  transform: translateY(-50%);
+  line-height: 180rpx;
+  box-shadow: 0px 0px 45px 1px rgba(0, 0, 0, 0.1);
+}
+
+.punchOutResultBlock {
+  position: fixed;
+  top: 40%;
+  text-align: center;
 }
